Fixed math.div error. Switching to bootstrap CDN

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,8 +75,8 @@ $sub-footer-text-color: $white;
 // @import "bootstrap/placeholders";
 
 // 5. Include Bootstrap helpers and utilities
-@import "bootstrap/helpers";
-@import "bootstrap/utilities/api";
+//@import "bootstrap/helpers";
+//@import "bootstrap/utilities/api";
 
 // Libraries
 @import "libraries/hamburgers/hamburgers";
