--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,27 +29,27 @@ $sub-footer-text-color: $white;
 // Bootstrap 5.3.2
 
 // 1. Include Bootstrap functions first
-@import "bootstrap/functions";
+//@import "bootstrap/functions";
 
 // 2. Include our variable overrides here
-@import "bootstrap-variables";
+//@import "bootstrap-variables";
 
 // 3. Include main bootstrap variables and functions
-@import "bootstrap/variables";
-@import "bootstrap/variables-dark";
-@import "bootstrap/maps";
-@import "bootstrap/mixins";
-@import "bootstrap/utilities";
+//@import "bootstrap/variables";
+//@import "bootstrap/variables-dark";
+//@import "bootstrap/maps";
+//@import "bootstrap/mixins";
+//@import "bootstrap/utilities";
 
 // 4. Include optional Bootstrap components
-@import "bootstrap/root";
-@import "bootstrap/reboot";
-@import "bootstrap/type";
-@import "bootstrap/images";
-@import "bootstrap/containers";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
+//@import "bootstrap/root";
+//@import "bootstrap/reboot";
+//@import "bootstrap/type";
+//@import "bootstrap/images";
+//@import "bootstrap/containers";
+//@import "bootstrap/grid";
+//@import "bootstrap/tables";
+//@import "bootstrap/forms";
 // @import "bootstrap/buttons";
 // @import "bootstrap/transitions";
 // @import "bootstrap/dropdown";
