--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -116,3 +116,10 @@ body {
     line-height: 1.3;
   }
 }
+
+body hr {
+  border: none;
+  border-top: 1px solid #000000 !important;
+  margin: 3em 0;
+}
+
